# dcos-k8s-rust-skaffold-demo

./: Cargo.toml
src/: api.rs  main.rs
