[package]
name = "rust-web-demo"
version = "0.1.0"

[dependencies]
diesel = { version = "1.4.5", features = ["postgres"] }
dotenv = "0.15.0"
rocket = "0.4.7"
rocket_codegen = "0.4.7"
serde = "1.0.123"
serde_json = "1.0.63"
serde_derive = "1.0.123"
custom_derive = "0.1.7"

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["json"]
